Added index.html from my local machine
Class exercise

--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-<html>
-
-  <head>
-
-    <title> My home page</title>
-  </head>
-
-  <body>
-
-    <h1> Welcome to NME's home page !</h1>
-    <p> It is cool !</p>
-  </body>
-  
-</html>
+<h1>This is my html page </h1>
